添加各位同学写的代码，添加对短链接的支持，添加关键词搜索功能
